# qt2

./: .env.example  .gitignore  Dockerfile  README.md  backup_docker_postgres.sh  deploy.sh  deploy_Fin-R1.txt  docker-compose.yml  download_Fin-R1.sh  macro_env.json  populate_stocks.py  pyproject.toml  stock_names_sample.csv  strategy_profiles.json  test_api_data_flow.py
.cursor/: mcp.json.example
.cursor/agents/: ai-ml-developer.md  architect-quant.md  qa-engineer.md
.cursor/rules/: mem0-sync.mdc
.cursor/scripts/: run_qmt_mcp_stdio.py  start-qmt-mcp.ps1
.github/workflows/: ci.yml
alembic/: env.py
config/: README.md  app.json  base.toml
config/strategies/: bear_five_dev.json  bear_rebound.json  bull_launch.json
doc/: 00-总体设计.md  01-数据模块.md  02-因子工程.md  02-数据采集模块.md  03-机器学习模块.md  03-选股模块.md  04-回测引擎.md  04-策略管理.md  05-交易模块.md  05-回测引擎.md  06-交易模块.md  06-模拟盘交易UI.md  07-API接口文档.md  07-用户手册.md  08-用户手册.md  09-运维部署.md  10-OpenClaw飞书对接.md  11-市场情绪引擎.md  12-数据采集模块.md  13-数据清洗与LLM.md  15-硬件配置指南.md  README.md  TODO-A100.md  TODO-P0.md  TODO-P01.md  TODO-P02.md  TODO-P1.md  TODO-P11.md  TODO-P12.md  TODO-P13.md  TODO-P2.md  TODO-P3.md  TODO-P4.md  TODO-daily-kline-threadpool.md  TODO-refine-data-collection.md  TODO.md
env/: .env.example
fin-r1-live/: .env.example  AUTO_RESUME_GUIDE.md  DATA_ACCESS_GUIDE.md  DATA_INVENTORY.md  DEPLOYMENT_GUIDE.md  END_TO_END_VERIFICATION.md  OPTIMIZATION.md  PROMPT_COVERAGE_ANALYSIS.md  PROMPT_VERIFICATION_SUMMARY.md  QUICK_VERIFICATION.md  README.md  RESUME_DOWNLOAD.md  STARTUP_VERIFICATION.md  docker-compose.yml  prompt.txt  prompt_v1_current.md  run_tests.sh  test_end_to_end.sh
fin-r1-live/api-middleware/: ARCHITECTURE.md  Dockerfile  config.py  database_client.py  main.py  realtime_fetcher.py  requirements.txt  sql_agent.py  stock_analyzer.py  technical_indicators.py
fin-r1-live/data-hub/: DOCKER_STARTUP_CHECK.md  Dockerfile  LOCAL_IMPORT_README.md  OFFLINE_IMPORT_GUIDE.md  auto_sync.py  data_inventory.py  data_validator.py  database.py  environment.yml  fetch_all_stocks_complete.py  fundamental_fetcher.py  fundamental_sync.py  history_downloader.py  history_downloader_with_resume.py  offline_data_importer.py  requirements.txt  resume_manager.py  sort_data_demo.py  startup.py  startup_auto_resume.py  test_docker_startup.sh  update_stock_names_csv.py
fin-r1-live/test/: .coveragerc  Dockerfile  Makefile  conftest.py  pytest.ini  requirements.txt  test_data_flow.py
logs/: etf_coverage_stats.csv  etf_daily_gap_rows.csv
openclaw/: AGENTS.md  README.md  config.openclaw.snippet.json5
openclaw/scripts/: sync_vibe_skills.ps1  sync_vibe_skills.py
openclaw/workspace/: AGENTS.md  README.md
prompts/: 01-architect-quant.md  02-ai-ml-developer.md  03-qa-engineer.md  README.md
scripts/: _audit_stock_floor.py  _check_kline.py  _check_qmt_sync_progress.py  _check_stock_backfill.py  _diag_cross_002350.py  _diag_cross_stock.py  _list_hk_sectors.py  _probe_hk_qmt.py  _probe_hk_sector.py  _probe_qmt_all_data.py  _sync_daily_pytdx_today.py  audit_etf_yearly.py  audit_non_kline_10y.py  build_qmt_field_zh_json.py  compare_ma5_ma10_cross.py  create_db.py  diag_strategy_funnel.py  etf_backfill_watch.py  etf_daily_coverage_and_align.py  init_db.py  parallel_orch_tails.ps1  probe_qmt_etf.py  repair_etf_codes.py  repair_factor_meta_schema.py  run_backtest.py  run_scheduler.py  run_screen_audit.py  sync_factors.py  sync_hk_stocks_from_qmt.py  sync_qmt_all_available.py  train_model.py  validate_etf_daily_gaps.py
src/: __init__.py
src/api/: __init__.py  deps.py  main.py  scheduler.py
src/backtest/: __init__.py  __main__.py  cli.py  data_loader.py  engine.py  engine_minute.py  fees.py  orchestrator_backtester.py  performance.py  stock_picker.py  strategy_cli.py  strategy_runner.py
src/common/: __init__.py  asset_types.py  config.py  db.py  db_batch.py  event_bus.py  logger.py  resilience.py  thread_routed_logging.py
src/data/: __init__.py  akshare_financial_sync.py  akshare_sync.py  alt_data_sync.py  alt_datacollect_progress.py  alt_source_cascade.py  bulk_writer.py  cb_data.py  cb_sync.py  collect_resume.py  data_completeness.py  download_engine.py  download_progress.py  etf_backfill_loop.py  etf_daily_audit.py  etf_daily_failover.py  etf_download_progress.py  factor_data.py  factor_i18n.py  financial_data.py  inst_holder_em.py  inst_holder_store.py  inst_holder_sync.py  kline_bulk_sync.py  kline_ex_div_refresh.py  limit_status.py  market_data.py  models.py  parallel_qmt_orchestrator.py  price_adjust.py  qmt_client.py  qmt_extra_sync.py  qmt_factor_registry.py  qmt_field_labels.zh.json  quality.py  realtime_snapshot.py  repair_qfq.py  schemas.py  sector_market_data.py  st_filter.py  (+7 more)
src/dataclean/: __init__.py  base.py  exceptions.py  llm_client.py  models.py  registry.py
src/datacollect/: __init__.py  adaptive_limiter.py  async_client.py  async_engine.py  async_rate_limiter.py  base.py  chunking.py  circuit_breaker.py  client.py  data_sources.json  dead_letter.py  dispatcher.py  freshness.py  health.py  idempotency.py  models.py  proxy_pool.py  rate_limiter.py  registry.py  router.py  scheduler.py  sentiment_bridge.py  sentinel.py  validator.py  watchlist_intel.py
src/distill/: __init__.py  consensus.py  flywheel.py  inference.py  models.py  trainer.py
src/factor/: __init__.py  alpha158.py  auto_screen.py  base.py  factor_analysis.py  factor_calc.py  factor_memory.py  factor_pool.py  factor_preprocess.py  quality_gate.py  xt_factor_loader.py
src/fundflow/: __init__.py  analyzer.py
src/ml/: __init__.py  auto_iterate.py  bandit.py  catboost_model.py  cross_validation.py  dataset.py  ensemble.py  experiment_tracker.py  feature_selection.py  lgb_model.py  model_evaluation.py  rd_loop.py  strategy_builder.py  walk_forward.py  xgb_model.py
src/monitoring/: __init__.py  factor_monitor.py  model_monitor.py
src/portfolio/: __init__.py  optimizer.py  risk_attribution.py
src/research/: __init__.py  paper_reader.py  (+1 more)
tests/: conftest.py
(+379 files in other folders)
