[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qt-quant"
version = "3.0.0"
description = "A股量化因子迭代平台 - LightGBM因子挖掘 + 迅投QMT交易 + 策略池化 + 宏观环境"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    # Database
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    # Machine Learning
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Config & Utils
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tqdm>=4.66.1",
    "schedule>=1.2.0",
    # Visualization (optional)
    "matplotlib>=3.7.0",
    # Database Migration
    "alembic>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short -q"
markers = [
    "qmt: 需要真实 QMT 终端连接的集成测试 (deselect with '-m \"not qmt\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.coverage.run]
source = ["src"]
omit = [
    "src/backtest/cli.py",
    "src/backtest/strategy_cli.py",
    "src/backtest/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 99

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
