[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qt-quant"
version = "4.0.0"
description = "A股 MA 程序选股 + QMT 交易"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "pandera>=0.23",
    "httpx>=0.27.0",
    "curl_cffi>=0.14",
    "fake-useragent>=2.0",
    "tenacity>=9.0",
    "akshare>=1.18",
    "baostock>=0.8",
    "tushare>=1.4",
    "adata>=2.9",
    "pytdx>=1.72",
    "exchange_calendars>=4.5",
    "yfinance>=0.2",
    "feedparser>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tqdm>=4.66.1",
    "schedule>=1.2.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short -q"
timeout = 30
timeout_method = "thread"
markers = [
    "qmt: 需要真实 QMT 终端连接的集成测试 (deselect with '-m \"not qmt\"')",
    "timeout: 自定义超时秒数",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.coverage.run]
source = ["src"]
omit = [
    "src/backtest/cli.py",
    "src/backtest/strategy_cli.py",
    "src/backtest/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 50

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
